# portudoc

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.config.yml  mkdocs.yml  pyproject.toml  rebuild-mkdocs-config.py  register_portuscript_lexer.py
docs/: controles.md  embutidos.md  funcoes.md  index.md  mkdocs_github_authors.yaml  operadores.md  variaveis.md
docs/modulos/: colorize.md  index.md  matematica.md  sistema.md
docs/tipos/: decimal.md  inteiro.md  lista.md  mapa.md  texto.md  tupla.md
lexers/: portuscript_lexer.py
theme/overrides/: main.html
